--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #05bca9;
+	background: #FFCF54;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -276,7 +276,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #05bca9;
+	color: #FFCF54;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -416,7 +416,7 @@ img.pull-left {
 	margin-left: -30px;
 	margin-top: -30px;
 	padding: 0;
-	background-color: #05bca9;
+	background-color: #FFCF54;
 	border-radius: 100%;
 	-webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
 	animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -547,7 +547,7 @@ label, legend {
 	display: block;
 }
 label span, legend span {
-	color: #05bca9;
+	color: #FFCF54;
 }
 input[type="checkbox"], input[type="radio"] {
 	display: inline;
@@ -630,7 +630,7 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-	background: #05bca9;
+	background: #FFCF54;
 	color: #FFFFFF;
 }
 
@@ -713,7 +713,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 .section-intro .with-bottom-line::after {
 	display: block;
-	background-color: #05bca9;
+	background-color: #FFCF54;
 	width: 120px;
 	height: 3px;
 	content: '\0020';
@@ -892,7 +892,7 @@ a.menu-toggle {
 	-webkit-transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
 	transform: translateX(-50%);
-	background-color: #05bca9;
+	background-color: #FFCF54;
 	content: '\0020';
 	display: block;
 	-moz-transition: all 0.3s ease-in-out;
@@ -902,7 +902,7 @@ a.menu-toggle {
 	transition: all 0.3s ease-in-out;
 }
 .main-navigation li.highlight a {
-	color: #05bca9;
+	color: #FFCF54;
 }
 .main-navigation li.with-sep a {
 	position: relative;
@@ -1179,8 +1179,8 @@ a.menu-toggle {
 	letter-spacing: .4rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	color: #05bca9;
-	border-color: #05bca9;
+	color: #FFCF54;
+	border-color: #FFCF54;
 }
 
 /**
@@ -1426,7 +1426,7 @@ a.menu-toggle {
 	margin-bottom: 1.5rem;
 }
 .process-content h5 {
-	color: #05bca9;
+	color: #FFCF54;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	letter-spacing: .2rem;
@@ -1529,7 +1529,7 @@ a.menu-toggle {
 .features-list .h05 {
 	font-size: 1.7rem;
 	line-height: 1.765;
-	color: #05bca9;
+	color: #FFCF54;
 	margin-bottom: 1.8rem;
 }
 
@@ -1669,7 +1669,7 @@ a.menu-toggle {
 	border: none;
 }
 .pricing-content .primary .top-part {
-	background: #05bca9;
+	background: #FFCF54;
 }
 .pricing-content .primary .top-part::before {
 	content: attr(data-info);
@@ -1751,7 +1751,7 @@ a.menu-toggle {
 }
 #testimonials .h01::after {
 	display: block;
-	background-color: #05bca9;
+	background-color: #FFCF54;
 	width: 120px;
 	height: 3px;
 	content: '\0020';
@@ -1848,11 +1848,11 @@ a.menu-toggle {
 	color: transparent;
 }
 #testimonials .flex-control-paging li a:hover {
-	border: 4px solid #05bca9;
+	border: 4px solid #FFCF54;
 }
 #testimonials .flex-control-paging li a.flex-active {
-	background: #05bca9;
-	border-color: #05bca9;
+	background: #FFCF54;
+	border-color: #FFCF54;
 	cursor: default;
 }
 
@@ -1897,7 +1897,7 @@ a.menu-toggle {
 }
 #testimonials .flex-direction-nav li a.flex-next:hover::after,
 #testimonials .flex-direction-nav li a.flex-prev:hover::before {
-	background: #05bca9;
+	background: #FFCF54;
 	color: #FFFFFF;
 }
 #testimonials .flex-direction-nav li.flex-nav-prev {
@@ -2014,7 +2014,7 @@ a.menu-toggle {
 	color: #0087cc;
 }
 .section-ads .button {
-	background: #05bca9;
+	background: #FFCF54;
 	color: #FFFFFF;
 }
 .section-ads .button:hover, .section-ads .button:focus {
@@ -2030,7 +2030,7 @@ a.menu-toggle {
  */
 
 #cta {
-	background: #05bca9;
+	background: #FFCF54;
 	padding-top: 7.2rem;
 	padding-bottom: 9rem;
 	text-align: center;
@@ -2130,7 +2130,7 @@ footer {
 	color: #465166;
 }
 footer a, footer a:visited {
-	color: #05bca9;
+	color: #FFCF54;
 }
 footer a:hover, footer a:focus {
 	color: #FFFFFF;
